# gmao-compression

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: calc_keepbits.py  compare-outputs.py  compare-sizes.py  compress.py  get-test-data.sh
src/gmao_compression/: compress.py  decompress.py  verify.py
