[project]
name = "gmao-compression"
version = "0.1.0"
description = "GMAO compression utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5netcdf>=1.6.1",
    "xarray>=2025.4.0",
    "xbitinfo>=0.0.3",
    "zstandard>=0.23.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
h5netcdf = "*"
